--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -86,14 +86,15 @@ button, a {
 
 .btn.btn-small {
   padding: .75rem 1rem;
-  background-color: #96f4b4;
+  background-color: #005611;
   color: #504f5b;
   border: none;
+  -webkit-transition: .3s;
+  transition: .3s;
 }
 
 .btn.btn-small:hover {
-  background-color: #005611;
-  color: white;
+  background-color: #504f5b;
 }
 
 .btn.btn-tertiary {
@@ -261,7 +262,7 @@ button, a {
 }
 
 .hero .buttons {
-  margin-bottom: 5rem;
+  margin-bottom: 10rem;
 }
 
 .hero .curve {
@@ -300,6 +301,7 @@ input[type=password] {
 input[type=checkbox] {
   /* display: none; */
   opacity: 0;
+  margin-left: -1rem;
 }
 
 input[type=checkbox] + label {
@@ -419,6 +421,8 @@ textarea:focus {
       -ms-flex-align: center;
           align-items: center;
   font-size: 1.1rem;
+  -webkit-transition: .3s;
+  transition: .3s;
 }
 
 .navbar .navbar-inner .logo .icon {
@@ -496,7 +500,7 @@ textarea:focus {
 }
 
 section {
-  max-width: 1024px;
+  max-width: 768px;
   margin: 5rem auto;
   padding: 1rem;
   width: 100%;
@@ -676,6 +680,7 @@ form.card-editor .btn {
   display: -ms-grid;
   display: grid;
   place-content: center;
+  height: 100vh;
 }
 
 .carousel {
@@ -797,6 +802,7 @@ form.card-editor .btn {
   width: 100%;
   height: 100%;
   background-color: white;
+  color: #212121;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1003,6 +1009,10 @@ footer .sitemap a {
       flex-basis: 100%;
   text-align: left;
   margin: .5rem 0;
+}
+
+footer p {
+  font-weight: 400;
 }
 
 .card-design {
@@ -1236,7 +1246,7 @@ footer .sitemap a {
     transition: .3s;
   }
   a:hover, ul li a:hover {
-    color: #96f4b4;
+    color: #39a95d;
   }
   .btn:hover {
     background-color: #96f4b4;
@@ -1313,9 +1323,9 @@ footer .sitemap a {
     top: 0;
   }
   .card-design > div {
-    height: 20rem;
-    width: 12rem;
-    left: 61vw;
+    height: 17rem;
+    width: 10rem;
+    left: calc(60vw);
     top: 11rem;
   }
 }
